# project-ult-entity-registry

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/frontend-api/: entities.json
docs/: PROGRESS.md  TASK_BREAKDOWN.md  entity-registry.project-doc.md
src/entity_registry/: __init__.py  aliases.py  batch.py  contracts.py  core.py  events.py  fuzzy.py  init.py  llm_client.py  ner.py  profile.py  public.py  references.py  resolution.py  resolution_types.py  review.py  storage.py
src/project_ult_entity_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_aliases.py  test_batch.py  test_contracts_alignment.py  test_core.py  test_event_anchors.py  test_fuzzy.py  test_init.py  test_llm_client.py  test_lookup_entity_refs.py  test_ner.py  test_profile.py  test_references.py  test_repository_hygiene.py  test_resolution_deterministic.py  test_resolution_fuzzy.py  test_resolution_llm.py  test_resolution_resolve_mention.py  test_review.py  test_storage.py  test_with_ah_pair_fixture.py  test_with_bse_fixture.py  test_with_hsgt_fixture.py
tests/boundary/: test_red_lines.py
tests/contract/: test_contracts_alignment.py  test_frontend_api_artifacts.py  test_runtime_contract.py
tests/fixtures/: __init__.py  ah_pair_snapshot.json  ah_pair_snapshot.source.json  bse_mapping_snapshot.json  bse_mapping_snapshot.source.json  stock_basic_sample.json  stock_hsgt_snapshot.json  stock_hsgt_snapshot.source.json
tests/regression/: test_with_shared_fixtures.py
tests/smoke/: test_public_smoke.py
tests/unit/: test_public_entrypoints.py
