[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-entity-registry"
version = "0.1.0"
description = "Scaffold workspace for entity-registry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "project-ult-contracts>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ner = [
    "hanlp>=2.1",
]
fuzzy = [
    "splink>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
